[package]
name = "anaso_sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "SDK for the Ana.so API"

[features]
default = ["client", "models"]
client = []
models = ["bitflags", "serde-email", "chrono"]

[dependencies]
bitflags = { version = "2.4.1", features = ["serde"], optional = true }
bs58 = { version = "0.5.0" }
chrono = { version = "0.4", features = ["serde"], optional = true }
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde-email = { version = "3.0.0", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
