[package]
name = "anaso_api_models"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "API models for Ana.so"
readme = "./README.md"

[dependencies]
bitflags = { version = "2.4.1", features = ["serde"] }
bs58 = "0.5.0"
serde = { version = "1.0.189", features = ["derive", "rc"] }
serde-email = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
